# alignedTypes

guided_alignedTypes_SYCLmigration/: CMakeLists.txt  README.md  sample.json
guided_alignedTypes_SYCLmigration/01_dpct_output/: CMakeLists.txt
guided_alignedTypes_SYCLmigration/01_dpct_output/Samples/6_Performance/alignedTypes/: sycl_aligned.dp.cpp
guided_alignedTypes_SYCLmigration/02_sycl_migrated_optimized/: CMakeLists.txt  MainSourceFiles.yaml
guided_convolutionSeparable_SYCLmigration/: CMakeLists.txt  README.md  sample.json
guided_convolutionSeparable_SYCLmigration/01_dpct_output/: CMakeLists.txt
guided_convolutionSeparable_SYCLmigration/02_sycl_migrated_optimized/: CMakeLists.txt
